web app is working without map

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <title>BLM4821 - Big Data Analytics Term Project</title>
-    
-    
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -15,7 +14,6 @@
         <div class="header">
             <h3 class="text-muted">BLM4821 - Big Data Analytics Term Project</h3>
         </div>
-        
         <div class="jumbotron">
             <h1>Chicago Crime Analytics</h1>
             <p class="lead"></p>
@@ -24,28 +22,24 @@
     
     <div class="row marketing">
         <div class="col-md-4">
-            <h4>Crime Type <button class="btn btn-success btn-sm">Start Job</button></h4>
+            <h4>Crime Type <button class="btn btn-success btn-sm" onclick="httpGet('/crime_type/start');">Start Job</button><button class="btn btn-danger btn-sm" onclick="httpGet('/crime_type/delete')">Delete Data</button></h4>
+            <canvas id="crime_type_chart" width="400" height="250"></canvas>                
+        </div>
+        <div class="col-md-4">
+            <h4>Arrest Type <button class="btn btn-success btn-sm" onclick="httpGet('/arrest_type/start');">Start Job</button><button class="btn btn-danger btn-sm" onclick="httpGet('/arrest_type/delete')">Delete Data</button></h4>
+            <canvas id="arrest_type_chart" width="400" height="250"></canvas> 
+        </div>
+        <div class="col-md-4">
+            <h4>Year <button class="btn btn-success btn-sm" onclick="httpGet('/year/start');">Start Job</button><button class="btn btn-danger btn-sm" onclick="httpGet('/year/delete')">Delete Data</button></h4>
+            <canvas id="year_chart" width="400" height="250"></canvas> 
+        </div>
+        <div class="col-md-8">
+            <h4>Map</h4>
             <canvas id="myChart" width="400" height="250"></canvas>                
         </div>
         <div class="col-md-4">
-            <h4>Crime Type</h4>
-            <canvas id="myChart" width="400" height="250"></canvas> 
-        </div>
-        <div class="col-md-4">
-            <h4>Crime Type</h4>  
-            <canvas id="myChart" width="400" height="250"></canvas> 
-        </div>
-        <div class="col-md-4">
-            <h4>Crime Type</h4>
-            <canvas id="myChart" width="400" height="250"></canvas>                
-        </div>
-        <div class="col-md-4">
-            <h4>Crime Type</h4>
-            <canvas id="myChart" width="400" height="250"></canvas> 
-        </div>
-        <div class="col-md-4">
-            <h4>Crime Type</h4>  
-            <canvas id="myChart" width="400" height="250"></canvas> 
+            <h4>FBI Code <button class="btn btn-success btn-sm" onclick="httpGet('/fbi_code/start');">Start Job</button><button class="btn btn-danger btn-sm" onclick="httpGet('/fbi_code/delete')">Delete Data</button></h4>
+            <canvas id="fbi_code_chart" width="400" height="250"></canvas> 
         </div>
     </div>
     
@@ -56,42 +50,175 @@
 </div>
 </body>
 <script>
-    var ctx = document.getElementById('myChart').getContext('2d');
-    var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-            datasets: [{
-                label: '# of Votes',
-                data: [12, 19, 3, 5, 2, 3],
-                backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)'
-                ],
-                borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
-                ],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                    ticks: {
-                        beginAtZero: true
-                    }
+
+
+function httpGet(theUrl)
+{
+    var xmlHttp = new XMLHttpRequest();
+    xmlHttp.open( "GET", theUrl, false ); // false for synchronous request
+    xmlHttp.send( null );
+    return xmlHttp.responseText;
+}
+$(document).ready(function(){
+    $.getJSON("/crime_type",function (gelen) {
+        var ctx = document.getElementById('crime_type_chart').getContext('2d');
+        var crime_type_chart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: gelen.labels,//['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                datasets: [{
+                    label: '# of Occurences',
+                    data: gelen.values,//[12, 19, 3, 5, 2, 3],
+                    backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
                 }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
             }
-        }
-    });
+        });
+    })
+
+    $.getJSON("/arrest_type",function (gelen) {
+        var ctx = document.getElementById('arrest_type_chart').getContext('2d');
+        var crime_type_chart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: gelen.labels,//['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                datasets: [{
+                    label: '# of Occurences',
+                    data: gelen.values,//[12, 19, 3, 5, 2, 3],
+                    backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    })
+
+    $.getJSON("/year",function (gelen) {
+        var ctx = document.getElementById('year_chart').getContext('2d');
+        var crime_type_chart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: gelen.labels,//['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                datasets: [{
+                    label: '# of Occurences',
+                    data: gelen.values,//[12, 19, 3, 5, 2, 3],
+                    backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    })
+
+    $.getJSON("/fbi_code",function (gelen) {
+        var ctx = document.getElementById('fbi_code_chart').getContext('2d');
+        var crime_type_chart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: gelen.labels,//['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                datasets: [{
+                    label: '# of Occurences',
+                    data: gelen.values,//[12, 19, 3, 5, 2, 3],
+                    backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    })
+});
 </script>
 </html>
