--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -42,7 +42,7 @@
             <canvas id="year_chart" width="400" height="250"></canvas> 
         </div>
         <div class="col-md-8">
-            <h4>Map</h4>
+            <h4>Map <button class="btn btn-success btn-sm" onclick="httpGet('/map/start');">Start Job</button><button class="btn btn-danger btn-sm" onclick="httpGet('/map/delete')">Delete Data</button></h4>
             <div id="mapid"></div>               
         </div>
         <div class="col-md-4">
@@ -227,18 +227,21 @@ $(document).ready(function(){
             }
         });
     })
-    
-    x = parseFloat(51.505);
-    y = parseFloat(-0.09);
-    var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoia29wZWNpZ2l2byIsImEiOiJjanZsNWdib2gwb3NrNGNvZmVva2hzM3lvIn0.36MSmaC_fNd6ZBQk8s40hA', {
-        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-        maxZoom: 18,
-        id: 'mapbox.streets',
-        accessToken: 'your.mapbox.access.token'
-    }).addTo(mymap);
 
-    marker = L.marker([x,y]).addTo(mymap);
+    $.getJSON("/map",function (gelen) {
+        x = parseFloat(gelen.latitude);
+        y = parseFloat(gelen.longitude);
+        var mymap = L.map('mapid').setView([x, y], 13);
+        L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoia29wZWNpZ2l2byIsImEiOiJjanZsNWdib2gwb3NrNGNvZmVva2hzM3lvIn0.36MSmaC_fNd6ZBQk8s40hA', {
+            attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+            maxZoom: 18,
+            id: 'mapbox.streets',
+            accessToken: 'your.mapbox.access.token'
+        }).addTo(mymap);
+
+        marker = L.marker([x,y]).addTo(mymap);
+    })
+
 });
 </script>
 </html>
